--- a/lightbar/public/index.html
+++ b/lightbar/public/index.html
@@ -25,6 +25,7 @@
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <script type="text/javascript">
       var product_reference = "{{ product_reference }}";
+      var callbackAddr = "{{ callbackAddr }}";
     </script>
     <div id="root"></div>
     <!--
