--- a/lightbar/public/index.html
+++ b/lightbar/public/index.html
@@ -24,8 +24,8 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <script type="text/javascript">
-      var product_reference = "{{ product_reference }}";
-      var callbackAddr = "{{ callbackAddr }}";
+      var productReference = "{{ product_reference }}";
+      var callbackAddr = "{{ callback_addr }}";
     </script>
     <div id="root"></div>
     <!--
