--- a/lightbar/public/index.html
+++ b/lightbar/public/index.html
@@ -26,6 +26,7 @@
     <script type="text/javascript">
       var productReference = "{{ product_reference }}";
       var callbackAddr = "{{ callback_addr }}";
+      var productAttribute = "{{ product_attribute }}";
     </script>
     <div id="root"></div>
     <!--
